package no.ntnu.tdt4240.project.engine.component;

import com.badlogic.ashley.core.Component;

/**
 * The BulletComponent class represents the bullet identifier. This is an empty tag component that
 * may be used to mark entities as bullets.
 */
public class BulletComponent implements Component {
    // Intentionally left blank
}
