package no.ntnu.tdt4240.project.engine.component;

import com.badlogic.ashley.core.Component;

/**
 * The EnemyComponent class represents the enemy identifier. This is an empty tag component that
 * may be used to mark entities as an enemy.
 */
public class EnemyComponent implements Component {
    // Intentionally left blank
}
