package no.ntnu.tdt4240.project.engine.component;

import com.badlogic.ashley.core.Component;

/**
 * The PlayerComponent class represents the player identifier. This is an empty tag component that
 * may be used to mark entities as the player.
 */
public class PlayerComponent implements Component {
    // Intentionally left blank
}
