package no.ntnu.tdt4240.project.engine.component;

import com.badlogic.ashley.core.Component;

/**
 * The RemoveComponent class represents the remove identifier. This is an empty tag component that
 * may be used to mark entities as to-be-removed at the end of the update cycle.
 */
public class RemoveComponent implements Component {
    // Intentionally left blank
}
